# rh_app_django

./: .env  pyproject.toml  requeriments.txt  requirements.txt
empleados/: models.py  serializers.py  urls.py  views.py
empleados/migrations/: 0001_initial.py
rh_django/: settings.py  urls.py
