[project]
name = "rh-django"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "pymysql>=1.2.0",
    "python-decouple>=3.8",
]
